# SDLGames

./: README.md
runer/: CMakeLists.txt
runer/inc/: Animation.h  Camera.h  Data.h  ParticleSystem.h  Player.h  Player_table.h  Sprite.h  Spritemap.h  Url.h  UsrFuc.h  effects.h  include_all.h  lstring.h  map.h  map_table.h  page.h  picSpritemap.h  picrom.h  rom.h  string_pic.h  stringmap.h  stringpage.h  test2.h
runer/res/: res.7z.007
runer/src/: Animation.cpp  Camera.cpp  Math_struct.cpp  ParticleSystem.cpp  Player.cpp  SDL_rotozoom.c  Sprite.cpp  UsrFuc.cpp  effect.cpp  lstring.cpp  main.cpp  map.cpp  maptest.cpp
